# kanja

./: CMakeLists.txt  README.md  project.config  qml.qrc
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Serie.qml  main.cpp  main.qml
src/backends/sqlite/: CMakeLists.txt  sqliteseriequeries.cpp  sqliteseriequeries.h  sqlitestorage.cpp  sqlitestorage.h
src/domain/: CMakeLists.txt  episode.cpp  episode.h  serie.cpp  serie.h  user.cpp  user.h
src/services/: CMakeLists.txt  seriequeries.cpp  seriequeries.h
src/utils/: CMakeLists.txt  timeformatter.cpp  timeformatter.h
tests/: CMakeLists.txt
tests/backends/sqlite/: CMakeLists.txt  sqliteseriequeriestest.cpp
tests/domain/: CMakeLists.txt  episodetest.cpp  serietest.cpp  usertest.cpp
tests/utils/: CMakeLists.txt  timeformattertest.cpp
